# CBMERJ

./: Dockerfile  README.md  data.xlsx  docker-compose.yml  entrypoint.sh  pyproject.toml
address/: admin.py  models.py  urls.py
address/api/: serializers.py  viewset.py
address/migrations/: 0001_initial.py  0002_remove_city_state_address_state_alter_city_name_and_more.py
config/: settings.py  urls.py
contrib/: dev.Dockerfile  env-sample
core/: admin.py  apps.py  models.py  urls.py
core/api/: serializers.py  viewset.py
core/management/commands/: import_register.py
core/migrations/: 0001_initial.py  0002_rename_type_of_trafficaccident_occurrence_type_of_traffic_accident.py
core/service/: statistic.py
epidemiological/: admin.py  apps.py  models.py
epidemiological/api/: serializers.py  viewset.py
epidemiological/migrations/: 0001_initial.py  0002_gender_alter_profile_gender.py  0003_alter_gender_name.py
event/: admin.py  models.py
event/api/: serializers.py  viewset.py
event/migrations/: 0001_initial.py  0002_alter_riskrating_rating_alter_typeofoccurrence_name_and_more.py  0003_alter_riskrating_rating_alter_typeofoccurrence_name_and_more.py  0004_alter_unittype_name.py  0005_alter_riskrating_rating.py  0006_alter_riskrating_rating.py  0007_alter_typeofoccurrence_name_and_more.py  0008_alter_riskrating_rating_alter_typeofoccurrence_name_and_more.py  0009_alter_riskrating_rating_and_more.py  0010_alter_riskrating_rating.py  0011_alter_riskrating_rating.py  0012_alter_unittype_name.py
profile_epidemiological/: apps.py
